# REIFundamentalsHub

./: .env.example  .gitignore  Business_Profile_Avatar_Workbook.docx  CLAUDE.md  HelmEcosystem_Security_Action_Plan.docx  README.md  REIHub_Session_Handoff.docx  REI_Fundamentals_Hub_Sales_Pitch.docx  REI_Fundamentals_Hub_Technical_Specs.docx  REI_Hub_Platform_Audit.docx  REI_Hub_Systems_Report.docx  SECURITY.md  docker-compose.yml  ecosystem.config.js  index.html  migrate_railway_to_supabase.py  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  wrangler.jsonc  ~$I_Hub_Platform_Audit.docx  ~$I_Hub_Systems_Report.docx
rei-hub/server/: .env.example  .gitignore  README.md  main.py  pyproject.toml  railway.toml  requirements.txt
rei-hub/server/rei/: config.py  database.py
rei-hub/server/rei/api/: admin_assistant_routes.py  admin_routes.py  ai_routes.py  analytics_routes.py  audit_routes.py  auth.py  auth_routes.py  bank_negotiation_routes.py  billing_routes.py  business_routes.py  calendar_routes.py  cloud_storage_routes.py  contacts_routes.py  content_hub_routes.py  crm_buyer_criteria_routes.py  crm_contacts_routes.py  crm_deal_files_routes.py  crm_deal_matches_routes.py  crm_deals_routes.py  crm_portfolio_routes.py  currency_routes.py  deal_liens_routes.py  deals_routes.py  deps.py  direct_mail_routes.py  documents_routes.py  email_marketing_routes.py  email_template_routes.py  flow_builder_routes.py  geocoding_routes.py  integrations_routes.py  lead_capture_routes.py  leads_pipeline_routes.py  loan_routes_payments.py  loan_routes_properties.py  market_analysis_routes.py  markets_routes.py  negotiation_activity_routes.py  negotiation_cases_routes.py  negotiation_messages_routes.py  (+17 more)
rei-hub/server/rei/backups/: aiApi.ts.bak  ai_routes.py.bak  ai_service.py.bak
rei-hub/server/rei/middleware/: admin_gate.py  cors.py  csrf.py  feature_gate.py  rate_limit.py  security_headers.py  superadmin_gate.py
rei-hub/server/rei/migrations/: alter_float_to_numeric.py  create_tables.py
rei-hub/server/rei/models/: __init__.py  admin_assistant.py  audit.py  business.py  conversation_flow.py  credentials.py  crm.py  direct_mail.py  email_template.py  lead_capture.py  leads_pipeline.py  loan.py  negotiation.py  user.py  user_integrations.py
(+591 files in other folders)
